--- a/web/gyro.htm
+++ b/web/gyro.htm
@@ -29,7 +29,7 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">EFIS Gyroscope</div>
+      <div class="sidebar-heading">EFIS Project</div>
       <div class="list-group list-group-flush">
         <a id="statusMenu" href="index.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-angle-double-left"></i> Back</a>
       </div>
@@ -60,6 +60,76 @@
 			<div class="tab-content">
 			
 			<div id="Status" class="container tab-pane active"><br>
+			<div class="row">
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label>Status </label>
+					<div class="alert alert-secondary" id="gyroStatus">...</div>
+				</div>
+				<div class="form-group">
+					<label>system_status</label>
+					<div class="alert alert-secondary" id="system_status">...</div>
+				</div>
+				<div class="form-group">
+					<label>system_selftest</label>
+					<div class="alert alert-secondary" id="system_selftest">...</div>
+				</div>
+				<div class="form-group">
+					<label>system_error</label>
+					<div class="alert alert-secondary" id="system_error">...</div>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label>cal_sys </label>
+					<div class="alert alert-secondary" id="cal_sys">...</div>
+				</div>
+				<div class="form-group">
+					<label>cal_gyro</label>
+					<div class="alert alert-secondary" id="cal_gyro">...</div>
+				</div>
+				<div class="form-group">
+					<label>cal_accel</label>
+					<div class="alert alert-secondary" id="cal_accel">...</div>
+				</div>
+				<div class="form-group">
+					<label>cal_mag</label>
+					<div class="alert alert-secondary" id="cal_mag">...</div>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label>coor_x </label>
+					<div class="alert alert-secondary" id="coor_x">...</div>
+				</div>
+				<div class="form-group">
+					<label>coor_y</label>
+					<div class="alert alert-secondary" id="coor_y">...</div>
+				</div>
+				<div class="form-group">
+					<label>coor_z</label>
+					<div class="alert alert-secondary" id="coor_z">...</div>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label>gyro_mag </label>
+					<div class="alert alert-secondary" id="gyro_mag">...</div>
+				</div>
+				<div class="form-group">
+					<label>gyro_roll</label>
+					<div class="alert alert-secondary" id="gyro_roll">...</div>
+				</div>
+				<div class="form-group">
+					<label>gyro_pitch</label>
+					<div class="alert alert-secondary" id="gyro_pitch">...</div>
+				</div>
+				<div class="form-group">
+					<label>gforce</label>
+					<div class="alert alert-secondary" id="gforce">...</div>
+				</div>
+			</div>
+			</div>
 			</div>
 
 			<div id="Config" class="container tab-pane fade"><br>
