--- a/web/index.htm
+++ b/web/index.htm
@@ -37,11 +37,11 @@ https://github.com/sebmatton/jQuery-Flight-Indicators
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <div class="sidebar-heading">EFIS Main Pannel</div>
+      <div class="sidebar-heading">EFIS Project</div>
       <div class="list-group list-group-flush">
 		<a href="network.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-rss"></i> Network</a>
 		<a href="gyro.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-location-arrow"></i> Gryroscope</a>
-		<a id="statusMenu" href="index.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-angle-double-left"></i> Back</a>
+		<a href="io.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-microchip"></i> Digital IOs</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -55,7 +55,7 @@ https://github.com/sebmatton/jQuery-Flight-Indicators
 	  
 	  <div class="container">
 		  
-		  <h4 class="mt-4"><i class="fas fa-tools"></i> Instruments</h4>
+		  <h4 class="mt-4"><i class="fas fa-tools"></i> Main Pannel</h4>
 		  <div class="col-sm-8">
 
 		    <div>
