--- a/web/io.htm
+++ b/web/io.htm
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>EFIS Network</title>
+  <title>EFIS Digital IOs</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
       </nav>
 	  
 	  <div class="container">
-		  <h4 class="mt-4"><i class="fas fa-rss"></i> Newtork</h4>      
+		  <h4 class="mt-4"><i class="fas fa-microchip"></i> Digital IOs</h4>      
 		  	
 			<!-- Nav tabs -->
 			<ul class="nav nav-tabs" role="tablist">
@@ -60,66 +60,26 @@
 			<div class="tab-content">
 			
 			<div id="Status" class="container tab-pane active"><br>
-			</div>
-			
-			<div id="Config" class="container tab-pane fade"><br>
-			<form action="/action_page.php" class="needs-validation" novalidate>
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
-					<label>Wi-Fi Mode</label>
-					<select class="form-control" name="wifimode" id="wifimode">
-						<option value="0">Accesss Point</option>
-						<option value="1">Station</option>
-					</select>
-					<div class="valid-feedback">OK</div>
-					<div class="invalid-feedback">Error</div>
+					<label>uptime </label>
+					<div class="alert alert-secondary" id="uptime">...</div>
 				</div>
 				<div class="form-group">
-					<label>Wi-Fi SSID</label>
-					<input type="text" class="form-control" name="wifissid" id="wifissid" required>
-					<div class="valid-feedback">OK</div>
-					<div class="invalid-feedback">Error</div>
+					<label>out Aux</label>
+					<div class="alert alert-secondary" id="outAux">...</div>
+					<input type="button" class="btn btn-primary" value="Change" onclick="sendOUT(2)">
 				</div>
 				<div class="form-group">
-					<label>Wi-Fi Password</label>
-					<input type="text" class="form-control" name="wifipwd" id="wifipwd" required>
-					<div class="valid-feedback">OK</div>
-					<div class="invalid-feedback">Error</div>
-				</div>
-			</div>
-			<div class="col-sm-3">
-				<div class="form-group">
-					<label>IP Mode</label>
-					<select class="form-control" name="ipmode" id="ipmode">
-						<option value="0">DHCP</option>
-						<option value="1">Fix IP</option>
-					</select>
-					<div class="valid-feedback">OK</div>
-					<div class="invalid-feedback">Error</div>
-				</div>
-				<div class="form-group">
-					<label>IP Address</label>
-					<input type="text" class="form-control" name="ipaddress" id="ipaddress" maxlength="15" size="15" pattern="^((\d{1,2}|1\d\d|2[0-4]\d|25[0-5])\.){3}(\d{1,2}|1\d\d|2[0-4]\d|25[0-5])$" required>
-					<div class="valid-feedback">OK</div>
-					<div class="invalid-feedback">Error</div>
-				</div>
-				<div class="form-group">
-					<label>Mask</label>
-					<input type="text" class="form-control" name="ipmask" id="ipmask" maxlength="15" size="15" pattern="^((\d{1,2}|1\d\d|2[0-4]\d|25[0-5])\.){3}(\d{1,2}|1\d\d|2[0-4]\d|25[0-5])$" required>
-					<div class="valid-feedback">OK</div>
-					<div class="invalid-feedback">Error</div>
-				</div>
-				<div class="form-group">
-					<label>Gateway</label>
-					<input type="text" class="form-control" name="ipgateway" id="ipgateway" maxlength="15" size="15" pattern="^((\d{1,2}|1\d\d|2[0-4]\d|25[0-5])\.){3}(\d{1,2}|1\d\d|2[0-4]\d|25[0-5])$" required>
-					<div class="valid-feedback">OK</div>
-					<div class="invalid-feedback">Error</div>
+					<label>in Aux</label>
+					<div class="alert alert-secondary" id="inAux">...</div>
 				</div>
 			</div>
 			</div>
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</form>
+			</div>
+			
+			<div id="Config" class="container tab-pane fade"><br>
 			</div>
 	
 			<!-- Tab panes -->
@@ -150,9 +110,16 @@
 		});
 	}, false);
 	})();
+	
+	function sendOUT(out) {
+	var xhttp = new XMLHttpRequest();
+		xhttp.open("GET", "http://192.168.1.5/setOUT?OUTstate="+out, true);
+		xhttp.send();
+	}
+	
   </script>
   
-  <script type="text/javascript" src="js/_network.js"></script>
+  <script type="text/javascript" src="js/_io.js"></script>
   
   <!-- Bootstrap core JavaScript
   <script src="jquery/jquery.min.js"></script> -->
