--- a/web/network.htm
+++ b/web/network.htm
@@ -63,7 +63,7 @@
 			</div>
 			
 			<div id="Config" class="container tab-pane fade"><br>
-			<form action="/action_page.php" class="needs-validation" novalidate>
+			<form action="http://192.168.1.5/networkCfg.php" class="needs-validation" novalidate>
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
