--- a/web/index.htm
+++ b/web/index.htm
@@ -42,6 +42,7 @@ https://github.com/sebmatton/jQuery-Flight-Indicators
 		<a href="network.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-rss"></i> Network</a>
 		<a href="gyro.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-location-arrow"></i> Gryroscope</a>
 		<a href="anemo.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-wind"></i> Anemometer</a>
+		<a href="altim.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-arrow-circle-up"></i> Altimeter</a>
 		<a href="io.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-microchip"></i> Digital IOs</a>
       </div>
     </div>
