--- a/web/system.htm
+++ b/web/system.htm
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>EFIS Digital IOs</title>
+  <title>EFIS System</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
       </nav>
 	  
 	  <div class="container">
-		  <h4 class="mt-4"><i class="fas fa-microchip"></i> Digital IOs</h4>      
+		  <h4 class="mt-4"><i class="fas fa-microchip"></i> System</h4>      
 		  	
 			<!-- Nav tabs -->
 			<ul class="nav nav-tabs" role="tablist">
@@ -66,10 +66,16 @@
 					<label>uptime </label>
 					<div class="alert alert-secondary" id="uptime">...</div>
 				</div>
+				<div>
+					<label>Reset</label></br>
+					<input type="button" class="btn btn-primary" value="Reset" onclick="sendCMD(1)">
+				</div>
+			</div>
+			<div class="col-sm-3">
 				<div class="form-group">
 					<label>out Aux</label>
 					<div class="alert alert-secondary" id="outAux">...</div>
-					<input type="button" class="btn btn-primary" value="Change" onclick="sendOUT(2)">
+					<input type="button" class="btn btn-primary" value="Change" onclick="sendCMD(2)">
 				</div>
 				<div class="form-group">
 					<label>in Aux</label>
@@ -113,7 +119,7 @@
 
   </script>
   
-  <script type="text/javascript" src="js/_io.js"></script>
+  <script type="text/javascript" src="js/_system.js"></script>
   
   <!-- Bootstrap core JavaScript
   <script src="jquery/jquery.min.js"></script> -->
