--- a/web/system.htm
+++ b/web/system.htm
@@ -70,6 +70,10 @@
 					<label>Reset</label></br>
 					<input type="button" class="btn btn-primary" value="Reset" onclick="sendCMD(1)">
 				</div>
+				<div>
+					</br><label>Erese E2PROM</label></br>
+					<input type="button" class="btn btn-primary" value="Erase" onclick="sendCMD(3)">
+				</div>
 			</div>
 			<div class="col-sm-3">
 				<div class="form-group">
