--- a/web/anemo.htm
+++ b/web/anemo.htm
@@ -44,7 +44,7 @@
       </nav>
 	  
 	  <div class="container">
-		  <h4 class="mt-4"><i class="fas fa-wind"></i> Anomemeter</h4>      
+		  <h4 class="mt-4"><i class="fas fa-wind"></i> Anemometer</h4>      
 		  	
 			<!-- Nav tabs -->
 			<ul class="nav nav-tabs" role="tablist">
