air sensor corected

--- a/web/anemo.htm
+++ b/web/anemo.htm
@@ -67,11 +67,11 @@
 					<div class="alert alert-secondary" id="airInValue">...</div>
 				</div>
 				<div class="form-group">
-					<label>airInVolts (V)</label>
+					<label>airInVolts (mV)</label>
 					<div class="alert alert-secondary" id="airInVolts">...</div>
 				</div>
 				<div class="form-group">
-					<label>airPressure (Pa)</label>
+					<label>airPressure (hPa)</label>
 					<div class="alert alert-secondary" id="airPressure">...</div>
 				</div>
 				<div class="form-group">
