--- a/web/network.htm
+++ b/web/network.htm
@@ -64,7 +64,8 @@
 			
 			<div id="Config" class="container tab-pane fade"><br>
 			<!--<form action="http://192.168.43.37/networkCfg.php" class="needs-validation" novalidate>-->
-			<form action="http://192.168.1.5/networkCfg.php" class="needs-validation" novalidate>
+			<!--<form action="http://192.168.1.5/networkCfg.php" class="needs-validation" novalidate>-->
+			<form action="http://172.16.0.50/networkCfg.php" class="needs-validation" novalidate>
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
