--- a/web/anemo.htm
+++ b/web/anemo.htm
@@ -71,6 +71,10 @@
 					<div class="alert alert-secondary" id="airInValue">...</div>
 				</div>
 				<div class="form-group">
+					<label>airInValue corrected (adc)</label>
+					<div class="alert alert-secondary" id="airInValueC">...</div>
+				</div>
+				<div class="form-group">
 					<label>airInVolts (mV)</label>
 					<div class="alert alert-secondary" id="airInVolts">...</div>
 				</div>
@@ -115,13 +119,13 @@
 			<div class="col-sm-3">
 				<div class="form-group">
 					<label>air EOS (mV) </label>
-					<input type="number" class="form-control" name="airmVoltsEOS" id="airmVoltsEOS" required>
+					<input type="text" class="form-control" name="airmVoltsEOS" id="airmVoltsEOS" required>
 					<div class="valid-feedback">OK</div>
 					<div class="invalid-feedback">Error</div>
 				</div>
 				<div class="form-group">
 					<label>air Sensor Sensivity (mV/mmH2O) </label>
-					<input type="number" class="form-control" name="airSenSensivity" id="airSenSensivity" required>
+					<input type="text" class="form-control" name="airSenSensivity" id="airSenSensivity" required>
 					<div class="valid-feedback">OK</div>
 					<div class="invalid-feedback">Error</div>
 				</div>
