--- a/web/index.htm
+++ b/web/index.htm
@@ -56,10 +56,14 @@ https://github.com/sebmatton/jQuery-Flight-Indicators
       </nav>
 	  
 	  <div class="container">
-		  
-		  <h4 class="mt-4"><i class="fas fa-tools"></i> Main Pannel</h4>
+		<div class="row">
+		  <div class="col-sm-3">
+			<h4 class="mt-4"><i class="fas fa-tools"></i> Main Pannel</h4>
+			<p class="my-1"><small id="appInfo" >...</small></p>
+		  </div>
+		</div>
+		<div class="row">
 		  <div class="col-sm-8">
-
 		    <div>
 				<span id="airspeed"></span>
 				<span id="attitude"></span>
@@ -70,6 +74,7 @@ https://github.com/sebmatton/jQuery-Flight-Indicators
 				<span id="variometer"></span>
 			</div>
 		   </div>
+		</div>
 	  </div>
     </div>
     <!-- /#page-content-wrapper -->
