--- a/web/gyro.htm
+++ b/web/gyro.htm
@@ -142,9 +142,9 @@
 			</div>
 
 			<div id="Config" class="container tab-pane fade"><br>
-			<!--<form action="http://192.168.43.37/gyroCfg.php" class="needs-validation" novalidate>-->
+			<form action="http://192.168.43.37/gyroCfg.php" class="needs-validation" novalidate>
 			<!--<form action="http://192.168.1.5/gyroCfg.php" class="needs-validation" novalidate>-->
-			<form action="http://172.16.0.50/gyroCfg.php"  class="needs-validation" novalidate>
+			<!--<form action="http://172.16.0.50/gyroCfg.php"  class="needs-validation" novalidate>-->
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
@@ -231,28 +231,8 @@
 
   </div>
   <!-- /#wrapper -->
-  
-  <script>
-	// Disable form submissions if there are invalid fields
-	(function() {
-	'use strict';
-	window.addEventListener('load', function() {
-		// Get the forms we want to add validation styles to
-		var forms = document.getElementsByClassName('needs-validation');
-		// Loop over them and prevent submission
-		var validation = Array.prototype.filter.call(forms, function(form) {
-			form.addEventListener('submit', function(event) {
-				if (form.checkValidity() === false) {
-				event.preventDefault();
-				event.stopPropagation();
-				}
-				form.classList.add('was-validated');
-			}, false);
-		});
-	}, false);
-	})();
-  </script>
-  
+
+  <script type="text/javascript" src="js/_ip.js"></script>
   <script type="text/javascript" src="js/_gyro.js"></script>
   
   <!-- Bootstrap core JavaScript
