--- a/web/index.htm
+++ b/web/index.htm
@@ -88,6 +88,7 @@ https://github.com/sebmatton/jQuery-Flight-Indicators
 <!-- Importing the FlightIndicators library -->
 <script src="js/jquery.flightindicators.js"></script>
 
+<script type="text/javascript" src="js/_ip.js"></script>
 <script type="text/javascript" src="js/_app.js"></script>
 
  <!-- Menu Toggle Script -->
