--- a/web/altim.htm
+++ b/web/altim.htm
@@ -92,9 +92,8 @@
 			</div>
 			
 			<div id="Config" class="container tab-pane fade"><br>
-			<form action="http://192.168.43.37/altimCfg.php" class="needs-validation" novalidate>
-			<!--<form action="http://192.168.1.5/altimCfg.php" class="needs-validation" novalidate>-->		
-			<!--<form action="http://172.16.0.50/altimCfg.php" class="needs-validation" novalidate>-->
+			
+			<form id="formCfg" class="needs-validation" novalidate>
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
@@ -104,11 +103,12 @@
 					<div class="invalid-feedback">Error</div>
 				</div>
 			</div>
+			
 			</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>	
 			</div>
-	
+			
 			<!-- Tab panes -->
 		    </div>
 			
