--- a/web/gyro.htm
+++ b/web/gyro.htm
@@ -142,9 +142,8 @@
 			</div>
 
 			<div id="Config" class="container tab-pane fade"><br>
-			<form action="http://192.168.43.37/gyroCfg.php" class="needs-validation" novalidate>
-			<!--<form action="http://192.168.1.5/gyroCfg.php" class="needs-validation" novalidate>-->
-			<!--<form action="http://172.16.0.50/gyroCfg.php"  class="needs-validation" novalidate>-->
+			
+			<form id="formCfg" class="needs-validation" novalidate>
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
