--- a/web/index.htm
+++ b/web/index.htm
@@ -43,6 +43,7 @@ https://github.com/sebmatton/jQuery-Flight-Indicators
 		<a href="gyro.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-location-arrow"></i> Gryroscope</a>
 		<a href="anemo.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-wind"></i> Anemometer</a>
 		<a href="altim.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-arrow-circle-up"></i> Altimeter</a>
+		<a href="units.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-file-alt"></i> Units</a>
 		<a href="system.htm" class="list-group-item list-group-item-action bg-light"><i class="fas fa-microchip"></i> System</a>
       </div>
     </div>
