--- a/web/network.htm
+++ b/web/network.htm
@@ -60,6 +60,9 @@
 			<div class="tab-content">
 			
 			<div id="Status" class="container tab-pane active"><br>
+				<div class="form-group">
+					<div class="alert alert-primary" id="wifiInfo">...</div>
+				</div>
 			</div>
 			
 			<div id="Config" class="container tab-pane fade"><br>
