--- a/web/anemo.htm
+++ b/web/anemo.htm
@@ -78,11 +78,11 @@
 					<div class="alert alert-secondary" id="airInVolts">...</div>
 				</div>
 				<div class="form-group">
-					<label>airPressure (hPa)</label>
+					<label>airPressureDiff (Pa)</label>
 					<div class="alert alert-secondary" id="airPressure">...</div>
 				</div>
 				<div class="form-group">
-					<label>airSpeed (km/h)</label>
+					<label>airSpeed (unit)</label>
 					<div class="alert alert-secondary" id="airSpeed">...</div>
 				</div>
 			</div>
