--- a/web/anemo.htm
+++ b/web/anemo.htm
@@ -122,8 +122,23 @@
 					<div class="invalid-feedback">Error</div>
 				</div>
 				<div class="form-group">
-					<label>air Sensor Sensivity (mV/mmH2O) </label>
-					<input type="text" class="form-control" name="airSenSensivity" id="airSenSensivity" required>
+					<label>airSensR </label>
+					<input type="text" class="form-control" name="airSensR" id="airSensR" required>
+					<div class="valid-feedback">OK</div>
+					<div class="invalid-feedback">Error</div>
+				</div>
+			</div>
+			
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label>airSensM </label>
+					<input type="text" class="form-control" name="airSensM" id="airSensM" required>
+					<div class="valid-feedback">OK</div>
+					<div class="invalid-feedback">Error</div>
+				</div>
+				<div class="form-group">
+					<label>airSensB </label>
+					<input type="text" class="form-control" name="airSensB" id="airSensB" required>
 					<div class="valid-feedback">OK</div>
 					<div class="invalid-feedback">Error</div>
 				</div>
