--- a/web/anemo.htm
+++ b/web/anemo.htm
@@ -131,14 +131,26 @@
 			
 			<div class="col-sm-3">
 				<div class="form-group">
-					<label>airSensM </label>
-					<input type="text" class="form-control" name="airSensM" id="airSensM" required>
+					<label>airSensPA1 (Pa) </label>
+					<input type="text" class="form-control" name="airSensPA1" id="airSensPA1" required>
 					<div class="valid-feedback">OK</div>
 					<div class="invalid-feedback">Error</div>
 				</div>
 				<div class="form-group">
-					<label>airSensB </label>
-					<input type="text" class="form-control" name="airSensB" id="airSensB" required>
+					<label>airSensPA2 (Pa) </label>
+					<input type="text" class="form-control" name="airSensPA2" id="airSensPA2" required>
+					<div class="valid-feedback">OK</div>
+					<div class="invalid-feedback">Error</div>
+				</div>
+				<div class="form-group">
+					<label>airSensV1 (mV) </label>
+					<input type="text" class="form-control" name="airSensV1" id="airSensV1" required>
+					<div class="valid-feedback">OK</div>
+					<div class="invalid-feedback">Error</div>
+				</div>
+				<div class="form-group">
+					<label>airSensV2 (mV) </label>
+					<input type="text" class="form-control" name="airSensV2" id="airSensV2" required>
 					<div class="valid-feedback">OK</div>
 					<div class="invalid-feedback">Error</div>
 				</div>
