--- a/web/altim.htm
+++ b/web/altim.htm
@@ -81,6 +81,10 @@
 					<label>alt_press</label>
 					<div class="alert alert-secondary" id="alt_press">...</div>
 				</div>
+				<div class="form-group">
+					<label>altitude</label>
+					<div class="alert alert-secondary" id="altitude">...</div>
+				</div>
 			</div>
 			</div>
 			</div>
