config OK response

--- a/web/altim.htm
+++ b/web/altim.htm
@@ -67,33 +67,33 @@
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
-					<label>altStatus </label>
+					<label>Status</label>
 					<div class="alert alert-secondary" id="altStatus">...</div>
 				</div>
 				<div class="form-group">
-					<label>alt_temp</label>
+					<label>Temperature</label>
 					<div class="alert alert-secondary" id="alt_temp">...</div>
 				</div>
 				<div class="form-group">
-					<label>alt_humid</label>
+					<label>Humidity</label>
 					<div class="alert alert-secondary" id="alt_humid">...</div>
 				</div>
 				<div class="form-group">
-					<label>alt_press</label>
+					<label>Preassure</label>
 					<div class="alert alert-secondary" id="alt_press">...</div>
 				</div>
 				<div class="form-group">
-					<label>altitude</label>
-					<div class="alert alert-secondary" id="altitude">...</div>
+					<label>Altitude</label>
+					<div class="alert alert-secondary" id="alt_value">...</div>
 				</div>
 				<div class="form-group">
 					<label>QNH</label>
-					<div class="alert alert-secondary" id="qnh">...</div>
+					<div class="alert alert-secondary" id="qnh_value">...</div>
 				</div>
 			</div>
 			
 			<div class="col-sm-3">
-				<div><label>altimeter</label></div>
+				<div><label>Altimeter</label></div>
 				<div><span id="altimeter"></span></div>
 			</div>
 			
@@ -113,7 +113,7 @@
 			<div class="col-sm-3">
 				<div class="form-group">
 					<label>QNH </label>
-					<input type="number" class="form-control" name="QNH" id="QNH" required>
+					<input type="number" class="form-control" name="cfg_qnh" id="cfg_qnh" required>
 					<div class="valid-feedback">OK</div>
 					<div class="invalid-feedback">Error</div>
 				</div>
