--- a/web/gyro.htm
+++ b/web/gyro.htm
@@ -113,6 +113,10 @@
 					<label>coor_z</label>
 					<div class="alert alert-secondary" id="coor_z">...</div>
 				</div>
+				<div class="form-group">
+					<label>ball</label>
+					<div class="alert alert-secondary" id="ball">...</div>
+				</div>
 			</div>
 			<div class="col-sm-3">
 				<div class="form-group">
