--- a/web/system.htm
+++ b/web/system.htm
@@ -63,7 +63,7 @@
 			<div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
-					<label>uptime </label>
+					<label>date </label>
 					<div class="alert alert-secondary" id="uptime">...</div>
 				</div>
 				<div>
