--- a/web/index.htm
+++ b/web/index.htm
@@ -50,8 +50,9 @@
 		<div class="row">
 		  <div class="col-sm-3">
 			<h4 class="mt-4"><i class="fas fa-tools"></i> Main Pannel</h4>
-			<p class="my-1"><small id="appInfo" >...</small></p>
+			<p class="my-1"><small id="connect" >...</small> <small id="onfly" >...</small></p>
 		  </div>
+		  <div id="datetxt">...</div>
 		</div>
 		<div class="row">
 		  <div class="col-sm-8">
