--- a/web/system.htm
+++ b/web/system.htm
@@ -64,7 +64,7 @@
 			<div class="col-sm-3">
 				<div class="form-group">
 					<label>date </label>
-					<div class="alert alert-secondary" id="uptime">...</div>
+					<div class="alert alert-secondary" id="datetxt">...</div>
 				</div>
 				<div>
 					<label>Reset</label></br>
